syntax = "proto3";

option go_package = "api/v1/pb";

message Coordinates {
  float latitude = 1;
  float longitude = 2;
}

message AddCoordinatesRequest {
  Coordinates coordinates = 1;
  uint32 deviceId = 2;
}

message AddCoordinatesReply {
  string insertedId = 1;
  string err = 2;
}

message ServiceStatusRequest {}

message ServiceStatusReply {
  int64 code = 1;
  string err = 2;
}

service GpsDataCollector {
  rpc AddCoordinates (AddCoordinatesRequest) returns (AddCoordinatesReply) {}

  rpc ServiceStatus (ServiceStatusRequest) returns (ServiceStatusReply) {}
}